terraform/natgw.tf
resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.myeip.id #attach eip to NAT
  subnet_id     = aws_subnet.pubsub[0].id

  tags = {
    Name = "gw NAT"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gw]
}
